@@ -65,6 +65,7 @@ void av_register_all(void)
     REGISTER_DEMUXER (DTS, dts);
     REGISTER_MUXDEMUX(DV, dv);
     REGISTER_DEMUXER (DV1394, dv1394);
+    REGISTER_DEMUXER (DXA, dxa);
     REGISTER_DEMUXER (EA, ea);
     REGISTER_MUXDEMUX(FFM, ffm);
     REGISTER_MUXDEMUX(FLAC, flac);
